# PHS564

./: .gitignore  CHANGE_LIST_vs_PHS564_course_repo_v8.md  PHS564_course_build_plan_AI_ready_v7_FINAL_12_sessions.md  PHS564_slides_master_plan_NotebookLM_v2.md  README.md  requirements.txt
data/: README.md  __init__.py  build_processed_extracts_demo.py  (+1 more)
legacy_pre_course_repo_sync_2025_12_31/: README.md  pyproject.toml  requirements.txt
legacy_pre_course_repo_sync_2025_12_31/assignments/HW04_Effect_Modification/: HW04_Effect_Modification.md
legacy_pre_course_repo_sync_2025_12_31/assignments/HW07_Selection_Bias/: HW07_Selection_Bias.md
legacy_pre_course_repo_sync_2025_12_31/assignments/HW08_Estimators_Models/: HW08_Estimators_Models.md
legacy_pre_course_repo_sync_2025_12_31/assignments/HW09_GFormula/: HW09_GFormula.md
legacy_pre_course_repo_sync_2025_12_31/data/: l01_potential_outcomes.csv  l02_ideal_rct.csv  l03_observational.csv  l04_effect_modification.csv  l05_collider_bias.csv  l06_confounding.csv  l07_selection_bias.csv  l10_iv.csv  l11_ipw.csv  l12_survival.csv
legacy_pre_course_repo_sync_2025_12_31/instructor_solutions/: L02_Ideal_RCTs_solution.ipynb  L03_Observational_Assumptions_solution.ipynb  L06_Confounding_solution.ipynb  L07_Selection_Bias_solution.ipynb  L08_Why_Model_solution.ipynb  L11_IP_Weighting_solution.ipynb  L12_Capstone_solution.ipynb
legacy_pre_course_repo_sync_2025_12_31/lectures/L01_Counterfactuals/: L01_Slides.md
legacy_pre_course_repo_sync_2025_12_31/lectures/L03_Observational_Assumptions/: L03_Slides.md  reading_guide.md
(+68 files in other folders)
